cargo-features = ["profile-rustflags"]

[package]
name = "protonhax"
version = "0.9.2"
edition = "2024"
authors = ["v_0ver <kvover@gmail.com>"]
description = "Утилита для запуска программ в среде Proton Steam"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["games", "steam", "proton"]
readme = "Readme.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
shell-words = "1.1"
colored = "3.0"
rustc-hash = "2.1.1"

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1
opt-level = 3
rustflags = ["-Ctarget-cpu=x86-64-v3", "-Ctarget-feature=+avx2,+fma"]
