cargo-features = ["profile-rustflags"]

[package]
name = "protonhax"
version = "0.9.3"
edition = "2024"
authors = ["hexqnt <hexqntlab@gmail.com>"]
description = "Утилита для запуска программ в среде Proton Steam"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["games", "steam", "proton"]
readme = "Readme.md"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
shell-words = "1.1"
colored = "3.1"
serde_json = "1.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
rustflags = ["-Ctarget-cpu=x86-64-v3", "-Ctarget-feature=+avx2,+fma"]
